# esa-coscaw-data-search

./: README.md  example-config.yaml  pytest.ini  requirements.txt  setup.cfg
.github/: pull_request_template.md
.github/workflows/: pytest.yml  python-app.yml
ancdata/: config.xml  odata.py  test_odata.py
collocation/: config.py  with_dataset.py  with_sar.py
fadg/: __init__.py  config.py  find_and_collocate.py
fadg/templates/: xml_request_template.xml
tests/: conftest.py  test_collocation.py  test_odata.py  tools.py
tests/files/core/: config.yaml
tests/test_core/: test_collocation.py  test_config.py
