[metadata]
name = fadg
version = attr: fadg.__version__
author = MET Norway
author_email = dm-service-organisation@met.no
description = Find and Access dynamic geodata
url = https://github.com/metno/data-discovery-tools
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
license = Apache 2.0
classifiers =
    Development Status :: 0 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
project_urls =
    Source Code = https://github.com/metno/data-discovery-tools

[options]
python_requires = >=3.8
include_package_data = True
packages = find:
install_requires =
    netCDF4
    owslib
    pyyaml>=5.1
    python-dateutil
    xdg

[options.data_files]
usr/share/doc/fadg =
  README.md

[bdist_wheel]
universal = 0

[flake8]
ignore = E221,E226,E228,E241
max-line-length = 99
